# policy100

./: README.md  pyproject.toml  requirements.txt
policy100/: __init__.py
policy100/assets/: mug_rack_task.xml  plate_dishwasher_task.xml
policy100/assets/xarm/: mug_rack_task.xml  plate_dishwasher_task.xml  xarm7.xml
policy100/assets/xarm/xarm_gripper/meshes/: left_finger.stl  left_inner_knuckle.stl  left_outer_knuckle.stl  right_finger.stl  right_inner_knuckle.stl  right_outer_knuckle.stl
policy100/assets/xarm7/: plate_dishwasher_mjcf.xml
policy100/assets/xarm7_menagerie/: plate_dishwasher_task.xml  xarm7.xml
policy100/envs/: __init__.py  dishwasher_plate_env.py  mug_rack_env.py  xarm7_env.py  xarm_dishwasher_env.py  xarm_env.py
policy100/tasks/: __init__.py  dishwasher_plate.py  mug_rack.py
scripts/: __init__.py  controller.py  debug.py  solve_dishwasher.py  vis_env.py
